--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	"dependencies": {
 		"clsx": "^2.0.0",
 		"copy-text-to-clipboard": "^3.2.0",
+		"dexie": "^3.2.4",
 		"lucide-svelte": "^0.286.0",
 		"tailwind-merge": "^1.14.0"
 	}
