--- a/package.json
+++ b/package.json
@@ -1,59 +1,59 @@
 {
-  "name": "finetune-helper",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "sst bind vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "npm run test:integration && npm run test:unit",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write .",
-    "test:integration": "playwright test",
-    "test:unit": "vitest",
-    "sst:deploy": "sst deploy",
-    "sst:dev": "sst dev"
-  },
-  "devDependencies": {
-    "@melt-ui/pp": "^0.1.2",
-    "@melt-ui/svelte": "^0.55.0",
-    "@playwright/test": "^1.28.1",
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/kit": "^1.20.4",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte": "^2.30.0",
-    "postcss": "^8.4.31",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.10.1",
-    "svelte": "^4.0.5",
-    "svelte-check": "^3.4.3",
-    "svelte-highlight": "^7.4.1",
-    "svelte-sequential-preprocessor": "^2.0.1",
-    "tailwindcss": "^3.3.3",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^4.4.2",
-    "vitest": "^0.32.2",
-    "sst": "^2.32.2",
-    "aws-cdk-lib": "2.101.1",
-    "constructs": "10.2.69",
-    "svelte-kit-sst": "^2.32.2"
-  },
-  "type": "module",
-  "dependencies": {
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "copy-text-to-clipboard": "^3.2.0",
-    "csv-parse": "^5.5.2",
-    "dexie": "^3.2.4",
-    "lucide-svelte": "^0.286.0",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
-  }
+	"name": "finetune-helper",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"test": "npm run test:integration && npm run test:unit",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write .",
+		"test:integration": "playwright test",
+		"test:unit": "vitest",
+		"sst:deploy": "sst deploy",
+		"sst:dev": "sst dev"
+	},
+	"devDependencies": {
+		"@melt-ui/pp": "^0.1.2",
+		"@melt-ui/svelte": "^0.55.0",
+		"@playwright/test": "^1.28.1",
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/kit": "^1.20.4",
+		"@typescript-eslint/eslint-plugin": "^6.0.0",
+		"@typescript-eslint/parser": "^6.0.0",
+		"autoprefixer": "^10.4.16",
+		"eslint": "^8.28.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-svelte": "^2.30.0",
+		"postcss": "^8.4.31",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.10.1",
+		"svelte": "^4.0.5",
+		"svelte-check": "^3.4.3",
+		"svelte-highlight": "^7.4.1",
+		"svelte-sequential-preprocessor": "^2.0.1",
+		"tailwindcss": "^3.3.3",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^4.4.2",
+		"vitest": "^0.32.2",
+		"sst": "^2.32.2",
+		"aws-cdk-lib": "2.101.1",
+		"constructs": "10.2.69",
+		"svelte-kit-sst": "^2.32.2"
+	},
+	"type": "module",
+	"dependencies": {
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.0.0",
+		"copy-text-to-clipboard": "^3.2.0",
+		"csv-parse": "^5.5.2",
+		"dexie": "^3.2.4",
+		"lucide-svelte": "^0.286.0",
+		"tailwind-merge": "^1.14.0",
+		"tailwindcss-animate": "^1.0.7"
+	}
 }
