--- a/package.json
+++ b/package.json
@@ -22,28 +22,29 @@
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/uuid": "^9.0.6",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.16",
+		"aws-cdk-lib": "2.101.1",
+		"constructs": "10.2.69",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
 		"postcss": "^8.4.31",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
+		"sst": "^2.32.2",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"svelte-highlight": "^7.4.1",
+		"svelte-kit-sst": "^2.32.2",
 		"svelte-sequential-preprocessor": "^2.0.1",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
-		"vitest": "^0.32.2",
-		"sst": "^2.32.2",
-		"aws-cdk-lib": "2.101.1",
-		"constructs": "10.2.69",
-		"svelte-kit-sst": "^2.32.2"
+		"vitest": "^0.32.2"
 	},
 	"type": "module",
 	"dependencies": {
@@ -54,6 +55,7 @@
 		"dexie": "^3.2.4",
 		"lucide-svelte": "^0.286.0",
 		"tailwind-merge": "^1.14.0",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"uuid": "^9.0.1"
 	}
 }
