--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,7 @@
 	"trailingComma": "none",
 	"printWidth": 100,
 	"htmlWhitespaceSensitivity": "ignore",
-	"plugins": ["prettier-plugin-svelte"],
+	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
 	"pluginSearchDirs": ["."],
 	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
