--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
 		"postcss": "^8.4.31",
-		"prettier": "^2.8.0",
+		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
+		"prettier-plugin-tailwindcss": "^0.5.6",
 		"sst": "^2.32.2",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
