Changes: *   Installed hf transformers.js *   Added dialog close type to button *   Created an Export dialog *   Changed sheet/sidebar to come in at medium viewport size instead of large *   Removed actions button from table buttons in mobile *   Added redirect to new document when creating new document *   Removed loading states from documents. Feels cleaner than having     loading shift on every *   Refactored dataToCSV function so that if its empty, it still exports.

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@xenova/transformers": "^2.7.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
 		"copy-text-to-clipboard": "^3.2.0",
