Changes: *   Added clipboard permissions for firefox in playwright config *   Added unpic for Image optimization components *   Moved the button variants to index.ts in lib so that we can use it on anchor elements *   Added styling to code highlighter height *   Added aria labels to copy buttons and tests to ensure copy values *   Created a hero component *   Added favicon and logo

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@unpic/svelte": "^0.0.36",
 		"@xenova/transformers": "^2.7.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
