installed motion one and animated the mobile sheet

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"csv-parse": "^5.5.2",
 		"dexie": "^3.2.4",
 		"lucide-svelte": "^0.286.0",
+		"motion": "^10.16.4",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss-animate": "^1.0.7",
 		"uuid": "^9.0.1"
