--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 	"dependencies": {
 		"@unpic/svelte": "^0.0.36",
 		"@xenova/transformers": "^2.7.0",
+		"axios": "^1.6.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
 		"copy-text-to-clipboard": "^3.2.0",
@@ -59,6 +60,7 @@
 		"dexie": "^3.2.4",
 		"lucide-svelte": "^0.286.0",
 		"motion": "^10.16.4",
+		"svelte-file-dropzone": "^2.0.2",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss-animate": "^1.0.7",
 		"three": "^0.158.0",
