--- a/package.json
+++ b/package.json
@@ -15,24 +15,25 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
-		"@melt-ui/pp": "^0.1.2",
-		"@melt-ui/svelte": "^0.55.0",
-		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.27.6",
-		"@types/three": "^0.158.2",
+		"@melt-ui/pp": "^0.3.2",
+		"@melt-ui/svelte": "^0.81.0",
+		"@playwright/test": "^1.44.1",
+		"@sveltejs/adapter-auto": "^3.2.1",
+		"@sveltejs/adapter-vercel": "^5.3.1",
+		"@sveltejs/kit": "^2.5.10",
+		"@types/three": "^0.165.0",
 		"@types/uuid": "^9.0.6",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.16",
-		"eslint": "^8.28.0",
+		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
 		"postcss": "^8.4.31",
 		"prettier": "^3.0.3",
 		"prettier-plugin-svelte": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.6",
-		"svelte": "^4.2.3",
+		"svelte": "^4.2.17",
 		"svelte-check": "^3.4.3",
 		"svelte-highlight": "^7.4.1",
 		"svelte-kit-sst": "^2.32.2",
@@ -40,12 +41,12 @@
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.4.2",
+		"vite": "^5.2.12",
 		"vitest": "^0.32.2"
 	},
 	"type": "module",
 	"dependencies": {
-		"@unpic/svelte": "^0.0.36",
+		"@unpic/svelte": "^0.0.53",
 		"@xenova/transformers": "^2.7.0",
 		"axios": "^1.6.1",
 		"class-variance-authority": "^0.7.0",
@@ -55,8 +56,8 @@
 		"dexie": "^3.2.4",
 		"lucide-svelte": "^0.286.0",
 		"motion": "^10.16.4",
-		"svelte-file-dropzone": "^2.0.2",
-		"tailwind-merge": "^1.14.0",
+		"svelte-file-dropzone": "^2.0.7",
+		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
 		"three": "^0.158.0",
 		"uuid": "^9.0.1"
