--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 	"type": "module",
 	"dependencies": {
 		"@unpic/svelte": "^0.0.53",
+		"@vercel/analytics": "^1.3.1",
 		"@xenova/transformers": "^2.7.0",
 		"axios": "^1.6.1",
 		"class-variance-authority": "^0.7.0",
