--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 	"dependencies": {
 		"@unpic/svelte": "^0.0.53",
 		"@vercel/analytics": "^1.3.1",
+		"@vercel/speed-insights": "^1.0.11",
 		"@xenova/transformers": "^2.7.0",
 		"axios": "^1.6.1",
 		"class-variance-authority": "^0.7.0",
